# AIR_Intelligence_System

./: .env.example  .gitignore  AIR_Complete.postman_collection.json  DEVELOPMENT_STATUS.md  DOCUMENTATION_INDEX.md  Dockerfile  GETTING_STARTED.md  Plan.md  README.md  Tasks.md  WEEK1_COMPLETION_REPORT.md  WEEK1_SUMMARY.md  air.db  conftest.py  docker-compose.yml  project_overview.md  pyproject.toml
data/input/Excel/: AIR_Log_Report_0x9be968b170_20260419_112940.xlsx
data/inputs/excel/: AIR_Log_Report_0x9be968af0a_20260419_113030.xlsx  (+1 more)
docs/: RAG_Pipeline_Complete.postman_collection.json  data-model-reference.md  enums-reference.md  normalization-rules.md  postman_collection.json  validation-rules.md
scripts/: demo_retrieval.py  domain_review.py  run_parse.py
src/: __init__.py
src/agents/: __init__.py
src/api/: __init__.py  editorial.py  incidents.py  insights.py  main.py  pipeline.py  retrieval.py
src/db/: crud.py  models.py  session.py
src/embeddings/: __init__.py  engine.py  models.py
src/incident/: __init__.py  classifiers.py  root_cause_analyzer.py  severity_analyzer.py  understanding_agent.py
src/ingestion/: __init__.py  excel_parser.py  literature_parser.py  pdf_parser.py  validators.py
src/insights/: __init__.py  editorial.py  editorial_models.py  editorial_prompts.py  formatters.py  generator.py  models.py  prompts.py
src/models/: analysis.py  incident.py  literature.py
src/normalization/: __init__.py  engine.py  enums.py  mappers.py
src/retrieval/: __init__.py  anomaly_detector.py  clustering.py  evidence.py  pattern_analyzer.py  query_preprocessor.py  rag.py  reranker.py  similarity_search.py  theme_extractor.py
src/utils/: config.py  helpers.py  logger.py
src/validation/: __init__.py  schemas.py  validator_agent.py
src/vector_store/: __init__.py  metadata.py  qdrant_handler.py
tests/fixtures/: sample_incidents.py
tests/integration/: test_api_ingest.py  test_llm_integration.py  test_pipeline.py  test_week10_editorial_pipeline.py  test_week11_pipeline.py  test_week12_pdf_pipeline.py  test_week13_cross_source.py  test_week14_advanced_clustering.py  test_week5_pipeline.py  test_week6_retrieval_pipeline.py  test_week7_clustering_pipeline.py  test_week8_rag_pipeline.py  test_week9_insight_pipeline.py
tests/unit/: test_models.py  test_normalization.py  test_parsers.py  test_utils_config.py  test_utils_helpers.py  test_week10_editorial_engine.py  test_week10_editorial_models.py  test_week11_formatters.py  test_week12_pdf_parser.py  test_week13_literature.py  test_week14_analytics.py  test_week3_incident_understanding.py  test_week4_root_cause.py  test_week4_validation.py  test_week5_embeddings.py  test_week5_vector_store.py  test_week6_rag.py  test_week6_reranker.py  test_week6_similarity_search.py  test_week7_clustering.py  test_week7_theme_extractor.py  test_week8_evidence.py  test_week8_grounded_rag.py  test_week8_query_preprocessor.py  test_week9_generator.py  test_week9_insight_models.py
