[tool.poetry]
name = "air-intelligence-system"
version = "1.0.0"
description = "AIR Clinical Incident Intelligence Engine - AI-powered clinical safety intelligence platform"
authors = ["AIR Team <team@air.local>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# =========================
# Data Processing
# =========================
pandas = "^2.2.2"
numpy = "^1.26.4"
openpyxl = "^3.1.5"

# =========================
# Configuration / Validation
# =========================
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.22"

# =========================
# API / Networking
# =========================
fastapi = "^0.115.0"
uvicorn = "^0.30.1"
httpx = "^0.27.0"
requests = "^2.32.3"
python-multipart = "^0.0.9"

# =========================
# AI / LLM / RAG
# =========================
openai = "^1.35.7"
langchain = "^0.2.16"
langchain-openai = "^0.1.23"
langgraph = "^0.2.56"
tiktoken = "^0.7.0"

# =========================
# Vector Database
# =========================
qdrant-client = "^1.9.1"

# =========================
# Embeddings / ML / Clustering
# =========================
sentence-transformers = "^2.7.0"
scikit-learn = "^1.5.1"
hdbscan = "^0.8.33"
umap-learn = "^0.5.6"

# =========================
# Testing / Quality
# =========================
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"

black = "^24.4.2"
ruff = "^0.5.5"
mypy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
jupyter = "^1.0.0"
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =========================
# Black
# =========================
[tool.black]
line-length = 100
target-version = ["py311"]

include = '\.pyi?$'

exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# =========================
# Ruff
# =========================
[tool.ruff]
line-length = 100
target-version = "py311"

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist"
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "UP"
]

ignore = [
    "E501",
    "B008"
]

# =========================
# MyPy
# =========================
[tool.mypy]
python_version = "3.11"

warn_return_any = true
warn_unused_configs = true

ignore_missing_imports = true

disallow_untyped_defs = false
disallow_incomplete_defs = false

# =========================
# Pytest
# =========================
[tool.pytest.ini_options]
testpaths = ["tests"]

python_files = [
    "test_*.py",
    "*_test.py"
]

addopts = """
-v
--cov=src
--cov-report=html
--cov-report=term-missing
"""